# warhammer-stats

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  README.md  app.py  attacking.py  pyproject.toml  requirements.txt  utils.py
profiles/: __init__.py  message.py  spearmen.json  swordmasters.json  warhammer_first.py  white_lions.json
streamlit/: CHANGELOG.md  __init__.py  app.py  main.py  page_1.py  page_2.py  utils.py
streamlit/components/: __init__.py  inputs.py  inputs_combat.py  inputs_hits.py  inputs_wounds.py  outputs.py  simulation.py
warhammer_stats/: pyproject.toml
warhammer_stats/tests/: __init__.py
