[tool.poetry]
name = "warhammer-stats-poetry"
version = "0.1.0"
description = "Developing stats for Warhammer"
authors = ["Micah Pearce <micah.r.pearce@gmail.com>"]
readme = "README.md"
packages = [{include = "warhammer_stats_poetry"}]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.45.0"
matplotlib = "^3.10.3"
plotly = "^6.0.1"
extra-streamlit-components = "^0.1.80"
ruff = "^0.11.11"
pydocstyle = "^6.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
